# llm-biology

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLOUDFLARE.md  EXPERIMENTS.md  README.md  circuit_graph_export.py  environment-mac.yml  environment.yml  generate_attribution_graph.py  label_from_graph.py  pyproject.toml  run_attribution.slurm  run_build_topk.slurm  run_label_features.slurm  run_label_from_graph.slurm
biology_server/: __init__.py  __main__.py  attribution.py  intervention_utils.py  server.py  tl_attribution.py  tl_forward.py  tl_intervention.py  tl_model.py
biology_server/static/: biology-server.css  biology-server.js  index.html
biology_server_t_lens/: __init__.py  memory_profile.py  tl_attribution.py  tl_forward.py  tl_freeze.py  tl_intervention.py  tl_model.py
data/: dog_prompts.jsonl
data/feature_interventions/: 2026-06-10-15-29-17-dallas-with-texas-uncertainty-node__texas__intervention-sweep__2026-06-15-21-30-24.json  2026-06-10-15-29-17-fact-the-capital-of-the-state-containing-dallas-i__texas__baseline-bootstrap__2026-06-14-22-28-15.json  2026-06-10-15-29-17-fact-the-capital-of-the-state-containing-dallas-i__texas__baseline-bootstrap__2026-06-25-15-31-38.json  2026-06-10-15-29-17-fact-the-capital-of-the-state-containing-dallas-i__texas__baseline-bootstrap__cells-12_9-24_10-24_9__2026-06-14-23-52-24.json  2026-06-10-15-29-17-fact-the-capital-of-the-state-containing-dallas-i__texas__baseline-bootstrap__cells-33_10__2026-06-14-23-57-58.json  2026-06-10-15-29-17-fact-the-capital-of-the-state-containing-dallas-i__texas__intervention-sweep__2026-06-14-22-39-05.json  2026-06-10-15-29-17-fact-the-capital-of-the-state-containing-dallas-i__texas__intervention-sweep__2026-06-25-16-38-43.json  texas-only__steerable-ceiling.json  texas-with-uncertainty__steerable-ceiling.json
data/neuronpedia-schemas/: attribution_graph_schema.json  (+1 more)
docs/: heretic-refusal.md
feature_lookup/: build_topk.py  compare_labels_to_windows.py  corpus.py  graph_targets.py  inspect.py  label_features.py  labels.py  patch_graph_labels.py  view_topk.py  windows.py
llm_biology/: __init__.py  compat.py  memory_profile.py
mlp_activations/: capture_activations.py
notebooks/: circuit_tracing_tutorial.ipynb  dallas_tl_attribution_colab.ipynb
scripts/: README.md  attribution_like_notebook.py  attribution_like_notebook.wilkes3  attribution_like_notebook_base_refusal.wilkes3  attribution_like_notebook_heretic_trial114.wilkes3  bootstrap_random_supernode_baseline.py  bootstrap_random_supernode_baseline.wilkes3  check_neuronpedia_exports.py  circuit_graph_export.py  compare_cross_model_feature_activations.py  compare_cross_model_feature_activations.wilkes3  generate_attribution_graph.py  hf_tl_mismatch_diag.py  hf_tl_mismatch_diag.wilkes3  label_from_graph.py  measure_replacement_fidelity.py  plot_cell_decomposition.py  plot_intervention_comparison.py  plot_odds_vs_steering.py  plot_steering_top_logits.py  run_attribution.slurm  run_attribution_dallas.wilkes3  run_build_topk.slurm  run_label_features.slurm  run_label_from_graph.slurm  run_replacement_fidelity.slurm  run_tests.wilkes3  serve_biology_server.py  steer_supernode_top_logits.wilkes3  steerable_ceiling.py  steerable_ceiling.wilkes3  sweep_supernode_interventions.py  sweep_supernode_interventions.wilkes3
slurm/: run_gpu.wilkes3
tests/: test_biology_server.py  test_check_neuronpedia_exports.py  test_circuit_graph_export.py  test_circuit_tracer_api.py  test_graph_targets.py  test_labels.py  test_patch_graph_labels.py  test_tl_batched.py  test_tl_feature_attribution.py  test_tl_forward.py  test_tl_freeze.py  test_tl_intervention.py  test_tl_logit_attribution.py  test_tl_model.py  test_tl_topk.py
(+69 files in other folders)
