[project]
name = "llm-biology"
version = "0.1.0"
description = "Custom TransformerLens circuit tracing pipeline for Qwen3-4B biology-style attribution graphs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate",
    "circuit-tracer",
    "datasets",
    "fsspec",
    "huggingface-hub",
    "numpy",
    "safetensors",
    "torch",
    "tqdm",
    "transformer-lens",
    "transformers",
    "zstandard",
]

[project.optional-dependencies]
api-labels = [
    "anthropic",
    "openai",
]
heretic = [
    "heretic-llm @ git+https://github.com/rowan-dauria/heretic.git@de4de5d",
]
dev = [
    "pre-commit",
    "pyright[nodejs]",
    "pytest",
    "ruff",
]
profiling = [
    "memory-profiler",
]

[project.scripts]
biology-server = "llm_biology.viewer.server:main"

[tool.setuptools.packages.find]
include = [
    "llm_biology*",
]

[tool.setuptools.package-data]
"llm_biology.viewer" = [
    "static/*",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "venv",
    "data/feature_topk",
    "data/ui_graphs",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["E402"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = [
    ".",
]
exclude = [
    "**/__pycache__",
    ".git",
    ".ruff_cache",
    "venv",
    "data/feature_topk",
    "data/ui_graphs",
    "notebooks",
]
reportMissingTypeStubs = false
reportMissingImports = false
reportUnknownMemberType = false
